--- a/views/main.html
+++ b/views/main.html
@@ -1,7 +1,2 @@
-<div class="row">
-  <div class="large-12 columns">
-    <h1>MTLv2</h1>
-  </div>
-</div>
-<div ng-include="templates.search"></div>
+<div ng-include="templates.controls"></div>
 <div ng-include="templates.video"></div>
