--- a/scss/app.scss
+++ b/scss/app.scss
@@ -58,8 +58,25 @@
 .playerControls{
   position: absolute;
   z-index: 100;
-  bottom: 10px;
-  right: 10px;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  background:rgba(0,0,0,0.3);
+  .dropdownButton{
+    
+  }
+  .dropdown-list{
+    position: absolute;
+    bottom: 40px;
+    &.open{
+      display:none;
+    }
+    &.closed{
+      display:block;
+    }
+  }
+  a.paused{
+  }
 }
 .controls{
   position:absolute;
@@ -69,4 +86,12 @@
   height:55px;    
   z-index:100;
 }
+
+.center-small{
+  background:#333;
+  margin-left: 2.8125rem;
+  padding-left:10px;
+}
+
+
 
