--- a/views/login.html
+++ b/views/login.html
@@ -1,15 +1,21 @@
-<p>Please log in</p>
-<p><button type="submit">Log in</button> or <a ng-click="loginWithGoogle()" >2Log in with Google</a></p>
 
-<form ua-login>
-	<input name="login" placeholder="Username"><br>
-	<input name="password" placeholder="Password" type="password"><br>
-	<p><button type="submit">Log in</button> or <a ua-oauth-link="google">Log in with Google</a></p>
-<!--  -->
-<a href="" ua-oauth-link="facebook">Log in with facebook</a>
-	<p ng-show="loading"><img src="https://app.userapp.io/img/ajax-loader-transparent.gif"></p>
-	<p ng-show="error">{{ error.message }}</p>
+<center><p>Please log in</p></center>
+
+<form ua-login class="row">
+  <div class="small-12 columns">
+  	<input name="login" placeholder="Username"><br>
+  	<input name="password" placeholder="Password" type="password"><br>
+  	<p><button type="submit">Log in</button> or <a ua-oauth-link="google">Log in with Google</a></p>
+  <!--  -->
+  <a href="" ua-oauth-link="facebook">Log in with facebook</a>
+  	<p ng-show="loading"><img src="https://app.userapp.io/img/ajax-loader-transparent.gif"></p>
+  	<p ng-show="error">{{ error.message }}</p>
+  </div>
 </form>
 
-<p><a href="#/signup">Sign up</a></p>
-<p><a href="#/reset-password">Reset password</a></p>
+<div class="row">
+  <div class="small-12 columns">
+    <p><a href="#/signup">Sign up</a></p>
+    <p><a href="#/reset-password">Reset password</a></p>
+  </div>
+</div>
