--- a/views/controls.html
+++ b/views/controls.html
@@ -3,9 +3,9 @@
   
   <nav class="tab-bar">
     <section class="left-small">
-      <a class="left-off-canvas-toggle menu-icon" ng-click="drawerOpen = !drawerOpen"><span></span></a>
+      <a class="left-off-canvas-toggle icon-cog button small" ng-click="drawerOpen = !drawerOpen"><span></span></a>
     </section>
-    
+    <div class="title">MLTv2</div>
   </nav>
   <div class="off-canvas-wrap" ng-class="{'move-right' : !!drawerOpen}" data-offcanvas>
     <div class="inner-wrap">
@@ -15,23 +15,29 @@
           <!-- whatever you want goes here -->
           <ul>
             <li>
-              <a href="#" ua-logout ng-show="user.authenticated">Log Out</a>
+              <form ng-submit="search(hashtag)" style="display:inline;">
+                  <input class="hashtagSearch" type="text" value="{{hashtag||''}}" placeholder="{{hashtag||'Search'}}" ng-model="hashtag" />
+                  <input type="button" class="button" value="Create Timelapse"  ng-click="search(hashtag)"/>
+              </form>
+            </li>
+            <li>
+              <a class="button" href="#" ua-logout ng-show="user.authenticated">Log Out</a>
+            </li>
+            <li>
+              <a class="button" href="https://github.com/loadedsith/mtl/issues">Bugs?</a>
             </li>
           </ul>
+          
       </aside>
-
       <!-- main content goes here -->
-      <h3>MTLv2</h3>
-      <div ng-show="user.authenticated">Welcome!</div>
-      <form ng-submit="search(hashtag)" class="row">
-        
-        <div class="small-3 columns">
-          <input class="hashtagSearch" type="text" value="{{hashtag||''}}" placeholder="{{hashtag||'Search'}}" ng-model="hashtag" />
-        </div>
-        <div class="small-9 columns">
-          <input type="button" class="button" value="Create Timelapse"  ng-click="search(hashtag)"/></div>
-        </div>
-      </form>
+      <!--<span class="icon-history"></span><span class="mls"> icon-history</span></span>-->
+			<!--<span class="icon-users"></span><span class="mls"> icon-users</span></span>-->
+			<!--<span class="icon-cog"></span><span class="mls"> icon-cog</span></span>-->
+			<!--<span class="icon-menu"></span><span class="mls"> icon-menu</span></span>-->
+			<!--<span class="icon-play"></span><span class="mls"> icon-play</span></span>-->
+			<!--<span class="icon-pause"></span><span class="mls"> icon-pause</span></span>-->
+			<!--<span class="icon-camera"></span><span class="mls"> icon-camera</span></span>-->
+     
 
     <!-- close the off-canvas menu -->
   </div>
