improve login, overall appearance

--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,4 @@
+@import url(http://fonts.googleapis.com/css?family=Poiret+One|Maven+Pro:400,900);
 meta.foundation-version {
   font-family: "/5.2.3/"; }
 
@@ -43,7 +44,7 @@ body {
   color: #222222;
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1;
@@ -1087,7 +1088,7 @@ select {
       color: #222222;
       padding: 1rem;
       display: block;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 1rem; }
       .accordion dd > a:hover {
         background: #e3e3e3; }
@@ -1507,7 +1508,7 @@ button, .button {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -2768,7 +2769,7 @@ kbd {
 
 .label {
   font-weight: normal;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
   text-align: center;
   text-decoration: none;
   line-height: 1;
@@ -3198,7 +3199,7 @@ ul.pagination {
     color: #eeeeee;
     font-weight: normal;
     font-size: 1rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+    font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
   .pricing-table .price {
     background-color: #f6f6f6;
     padding: 0.9375rem 1.25rem;
@@ -3206,7 +3207,7 @@ ul.pagination {
     color: #333333;
     font-weight: normal;
     font-size: 2rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+    font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
   .pricing-table .description {
     background-color: white;
     padding: 0.9375rem;
@@ -3438,7 +3439,7 @@ dialog[open] {
   padding: 0.875rem 0;
   list-style-type: none;
   list-style-position: inside;
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+  font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
   .side-nav li {
     margin: 0 0 0.4375rem 0;
     font-size: 0.875rem; }
@@ -3453,7 +3454,7 @@ dialog[open] {
     .side-nav li.active > a:first-child:not(.button) {
       color: #1cc7ff;
       font-weight: normal;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
+      font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; }
     .side-nav li.divider {
       border-top: 1px solid;
       height: 0;
@@ -3561,7 +3562,7 @@ dialog[open] {
     display: inline;
     margin-left: 1rem;
     margin-bottom: 0.625rem;
-    font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+    font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
     font-weight: normal;
     font-size: 0.875rem;
     color: #999999; }
@@ -3957,7 +3958,7 @@ p {
 
 /* Default header styles */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+  font-family: "Poiret One", sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #222222;
@@ -4235,7 +4236,7 @@ blockquote p {
       background: #efefef;
       color: #222222;
       padding: 1rem 2rem;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 1rem; }
       .tabs dd > a:hover, .tabs .tab-title > a:hover {
         background: #e1e1e1; }
@@ -4530,7 +4531,7 @@ meta.foundation-mq-topbar {
       color: white;
       padding: 12px 0 12px 0;
       padding-left: 15px;
-      font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+      font-family: "Maven Pro", "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
       font-size: 0.8125rem;
       font-weight: normal;
       text-transform: none; }
@@ -5425,8 +5426,8 @@ th.hide-for-touch {
     display: table-cell !important; } }
 @font-face {
   font-family: 'mtl';
-  src: url("fonts/mtl.eot?-guswpr");
-  src: url("fonts/mtl.eot?#iefix-guswpr") format("embedded-opentype"), url("fonts/mtl.woff?-guswpr") format("woff"), url("fonts/mtl.ttf?-guswpr") format("truetype"), url("fonts/mtl.svg?-guswpr#mtl") format("svg");
+  src: url("fonts/mtl.eot?-m01y56");
+  src: url("fonts/mtl.eot?#iefix-m01y56") format("embedded-opentype"), url("fonts/mtl.woff?-m01y56") format("woff"), url("fonts/mtl.ttf?-m01y56") format("truetype"), url("fonts/mtl.svg?-m01y56#mtl") format("svg");
   font-weight: normal;
   font-style: normal; }
 [class^="icon-"], [class*=" icon-"] {
@@ -5440,6 +5441,9 @@ th.hide-for-touch {
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
+
+.icon-compass:before {
+  content: "\e607"; }
 
 .icon-history:before {
   content: "\e600"; }
@@ -5458,6 +5462,18 @@ th.hide-for-touch {
 
 .icon-pause:before {
   content: "\e605"; }
+
+.icon-google:before {
+  content: "\e608"; }
+
+.icon-facebook:before {
+  content: "\e609"; }
+
+.icon-github:before {
+  content: "\e60a"; }
+
+.icon-linkedin:before {
+  content: "\e60b"; }
 
 .icon-camera:before {
   content: "\e606"; }
@@ -5618,6 +5634,29 @@ th.hide-for-touch {
       display: none; }
   .playerControls a.paused, .playerControls a.playing {
     margin-bottom: 0px; }
+
+.login {
+  font-size: 25px;
+  content: ""; }
+
+.button, .btn, [type='submit'], [type='button'] {
+  color: #008cba !important;
+  background-color: transparent !important; }
+  .button:hover, .btn:hover, [type='submit']:hover, [type='button']:hover {
+    color: white !important;
+    background-color: #008cba !important; }
+
+.google {
+  color: #903520 !important; }
+  .google:hover {
+    color: white !important;
+    background-color: #903520 !important; }
+
+.facebook {
+  color: #4d5d99 !important; }
+  .facebook:hover {
+    color: white !important;
+    background-color: #4d5d99 !important; }
 
 .inner-wrap {
   padding-bottom: 88%;
