--- a/views/controls.html
+++ b/views/controls.html
@@ -24,7 +24,7 @@
               <a class="button" href="#" ua-logout ng-show="user.authenticated">Log Out</a>
             </li>
             <li>
-              <a class="button" href="https://github.com/loadedsith/mtl/issues">Bugs?</a>
+              <a class="button" href="https://github.com/loadedsith/mtl/issues">Bugs or feature suggestions</a>
             </li>
           </ul>
           
