punchin hole's in canvasi!

--- a/views/login.html
+++ b/views/login.html
@@ -58,7 +58,7 @@
   </div>
   <div class="small-12 columns">
     <center>
-      <qrcode data="http://mtlv2.herokuapp.com"></qrcode>
+      <qrcode data-size="512" data="http://mtlv2.herokuapp.com"></qrcode>
     </center>
   </div>
 </div>
