--- a/views/controls.html
+++ b/views/controls.html
@@ -26,6 +26,9 @@
             <li>
               <a class="button" href="https://github.com/loadedsith/mtl/issues">Bugs or feature suggestions</a>
             </li>
+            <li>
+              <qrcode data-size="128" data="{{hashtag}}" ng-show="!!hashtag"></qrcode>
+            </li>
           </ul>
           
       </aside>
