--- a/css/app.css
+++ b/css/app.css
@@ -5478,6 +5478,11 @@ th.hide-for-touch {
 .icon-camera:before {
   content: "\e606"; }
 
+body {
+  background: #cccccc url("../images/bgOverlay.png") no-repeat scroll center bottom;
+  width: 687px;
+  height: 295px; }
+
 .loadingWrapper {
   position: absolute;
   z-index: 1;
