--- a/views/signup.html
+++ b/views/signup.html
@@ -1,12 +1,19 @@
 <p>Sign up</p>
 
 <form ua-signup ng-show="!verificationEmailSent">
-	<input name="first_name" placeholder="Your name"><br>
-	<input name="login" ua-is-email placeholder="Email"><br>
+	<input type="text" name="first_name" placeholder="Your name"><br>
+	<input type="text" name="login" ua-is-email placeholder="Email"><br>
 	<input name="password" placeholder="Password" type="password"><br>
-	<p><button type="submit">Create account</button> or <a href="" ua-oauth-link="google">Sign up with Google</a></p>
+	<p><button class="button" type="submit">Create account</button> or <a href="" class="button" ua-oauth-link="google">Sign up with Google</a></p>
 
-	<p ng-show="loading"><img src="https://app.userapp.io/img/ajax-loader-transparent.gif"></p>
+	<p ng-show="loading">
+    <div class="loadingWrapper" ng-show="loading">
+      <div class="loading">
+        <span class="bg icon-camera"></span></span>
+        <span class="fg icon-history"></span></span>
+      </div>
+    </div>
+  </p>
 	<p ng-show="error">{{ error.message }}</p>
 </form>
 
